[package]
name = "super-seq-macro"
version = "0.3.8"
authors = ["David Tolnay <dtolnay@gmail.com>", "Eric Van Albert <eric@van.al>"]
categories = ["development-tools", "no-std", "no-std::no-alloc"]
description = "Macro to repeat a fragment of code based on a RHAI expression"
documentation = "https://docs.rs/super-seq-macro"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ervanalb/seq-macro"
rust-version = "1.45"

[dependencies]
syn = "2.0.98"
proc-macro2 = "1.0.93"
rhai = { version = "1.21.0" }

[lib]
proc-macro = true

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }
quote = "1.0.38"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
