[package]
    authors = [
        "David Tolnay <dtolnay@gmail.com>",
        "Eric Van Albert <eric@van.al>",
        "Markus Meyer <dasbossgit>",
    ]
    categories = ["development-tools", "no-std", "no-std::no-alloc"]
    description = "Macro to repeat a fragment of code based on a RHAI expression"

    edition      = "2024"
    name         = "super-seq-macro"
    rust-version = "1.88"
    version      = "0.4.1-alpha.2"

[dependencies]
    proc-macro2           = "1.0.95"
    rhai                  = { version = "1.22.2" }
    super-seq-macro-types = { path = "./types" }
    syn                   = "2.0.104"

[lib]
    proc-macro = true

[dev-dependencies]
    quote       = "1.0.38"
    rustversion = "1.0"
    trybuild    = { version = "1.0.49", features = ["diff"] }
